# IrrigationManager

./: .gitignore  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  ROADMAP.md  hacs.json  pyproject.toml
.github/workflows/: backend.yml  frontend.yml  home-assistant.yml  release.yml
custom_components/irrigation_manager/: __init__.py  adapters.py  binary_sensor.py  calendar.py  card_entities.py  config_flow.py  const.py  coordinator.py  diagnostics.py  events.py  executor.py  frontend.py  leak_monitor.py  manager.py  manifest.json  meter.py  models.py  profiles.py  runtime.py  scheduler.py  sensor.py  services.py  services.yaml  soil_moisture.py  storage.py  water_balance.py  weather.py
docs/: 01_Vision.md  02_Requirements.md  03_Architecture.md  04_DataModel.md  05_DataStorage.md  06_Scheduler.md  07_WaterModel.md  08_WaterMeter.md  09_UI_ConfigFlow.md  10_Entities.md  11_Safety.md  12_OpenQuestions.md  13_ProjectNotes.md  14_Qualification.md  15_Traceability.md  16_ProfileSources.md  17_Neukonzept.md
docs/adr/: 0001-zonen-sequenziell-ausfuehren.md  0002-exklusive-ventilsteuerung.md  0003-sicherheitsuebersteuerung-nur-im-wartungstest.md  (+3 more)
tests/: __init__.py  conftest.py  irrigation_plant.py  test_adapters.py  test_automatic_scheduling.py  test_calendar.py  test_config_flow.py  test_executor.py  test_frontend.py  test_init.py  test_leak_monitor.py  test_manual_requests.py  test_meter.py  test_new_model.py  test_operational_scope.py  test_operations.py  test_phase5_multiweek.py  test_profile_migrations.py  test_profile_operations.py  test_profiles.py  test_qualification_scenarios.py  test_safety_inputs.py  test_safety_modes.py  test_scheduler.py  test_soil_moisture.py  test_water_balance.py  test_weather.py
(+19 files in other folders)
